tests/testthat/test-select-errors.txt
> local_methods([.dplyr_test_select = function(x, ...) {
+   unclass(x)
+ })
+ df <- new_tibble(list(), nrow = 0L, class = "dplyr_test_select")
+ select(df, everything())
Error: <text>:1:15: unexpected '['
1: local_methods([
                  ^

